--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-less": "~0.8.2",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
